waybar, more scripts more cool lmao

--- a/.config/hypr/modules/rules.conf
+++ b/.config/hypr/modules/rules.conf
@@ -19,8 +19,15 @@ windowrulev2 = float, class: thunar, title: ^(Rename)(.*)
 windowrule = animation gnomed, match:float yes
 
 windowrule {
+    name = no_shadow
+    match:float = no
+
+    no_shadow = yes
+}
+
+windowrule {
     name = float
-    match:class = Emulator 
+    match:class = ^(Emulator|feh)$ 
 
     float = yes
 }
@@ -114,6 +121,14 @@ windowrulev2 = float, initialClass: feh
 # Floating DevTools
 windowrulev2 = float, initialTitle: DevToolsApp
 
+
+layerrule {
+    name = waybar
+    match:namespace = waybar
+
+    blur = yes
+    ignore_alpha = 0.1
+}
 
 windowrulev2= noblur,class:^()$,title:^()$
 
