--- a/.config/hypr/modules/startup.conf
+++ b/.config/hypr/modules/startup.conf
@@ -41,3 +41,6 @@ exec-once = hyprctl setcursor 'BreezeX-RoséPine' 24
 
 # Swayosd server
 exec-once = swayosd-server
+
+# wl-clipboard-persist
+exec-once = wl-clip-persist --clipboard both
