--- a/.config/hypr/modules/general.conf
+++ b/.config/hypr/modules/general.conf
@@ -8,13 +8,13 @@ general {
 
     gaps_in = 4
     gaps_out = 4
-    border_size = 2
+    border_size = 0
 
     layout = scrolling
 
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = true
+    allow_tearing = false
 
     permission = /usr/bin/discord, screencopy, allow
 }
