--- a/.config/hypr/modules/rules.conf
+++ b/.config/hypr/modules/rules.conf
@@ -27,7 +27,7 @@ windowrule {
 
 windowrule {
     name = float
-    match:class = ^(Emulator|feh)$ 
+    match:class = ^(Emulator|feh|com.snes.evercal)$ 
 
     float = yes
 }
