--- a/.config/hypr/modules/startup.conf
+++ b/.config/hypr/modules/startup.conf
@@ -14,7 +14,7 @@ exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets
 
 # Wallpaper manager
 exec-once = awww-daemon
-exec-once = sleep 2 && awww img .config/hypr/wallpaper/magical.jpg
+exec-once = sleep 2 && wallpaper
 
 # Night light if you want it...
 exec-once = hyprsunset --gamma 85% --temperature 5500
