--- a/.config/hypr/modules/rules.conf
+++ b/.config/hypr/modules/rules.conf
@@ -1,22 +1,29 @@
-# ===================================================
-#
-#              [ Rules Configuation ]
-#
-# ===================================================
+# ===================================================#
+#                                                    #
+#              [ Rules Configuation ]                #
+#                                                    #
+# ===================================================#
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 
 
 # Floating Rename Dialogue (Thunar)
-windowrulev2 = float, class: thunar, title: ^(Rename)(.*)
+windowrule {
+    name = rename_floats
+    match:class = ^(thunar)$
+    match:title = ^(Rename)(.*)
 
-windowrule = animation gnomed, match:float yes
+    float = yes
+}
+
+windowrule {
+    name = floats_are_gnomed
+    match:float = yes
+
+    animation = gnomed
+}
 
 windowrule {
     name = wlogout
@@ -25,11 +32,10 @@ windowrule {
     float = yes
     center = yes
     size = 550 200
-    animation = slide down
+    animation = scale 90%
     fullscreen_state = 0
     move = 300 300
     rounding = 30
-    # no_shadow = yes
     dim_around = yes
 }
 
@@ -40,11 +46,13 @@ windowrule {
     no_shadow = yes
 }
 
+# Floaty floats
 windowrule {
     name = float
     match:class = ^(Emulator|exo-desktop-item-edit|feh|com.snes.evercal|mpv|dev.musagy.hypremoji|wlogout)$ 
 
     float = yes
+    no_shadow = no
 }
 
 windowrule {
@@ -59,7 +67,13 @@ windowrule {
 }
 
 # Hyprland Share Picker
-windowrulev2 = float, class:hyprland-share-picker
+# windowrulev2 = float, class:hyprland-share-picker
+windowrule {
+    name = hyprland_share_picker_floats
+    match:class = ^(hyprland-share-picker)$
+
+    float = yes
+}
 
 windowrule {
     name = file picker
@@ -70,88 +84,52 @@ windowrule {
     center = on
 }
 
-# Allows JetBrains IDEs to spawn windows for tooltips
-windowrulev2 = noinitialfocus,class:^(jetbrains-.*)
+windowrule {
+    name = jetbrains_ide
+    match:class = ^(jetbrains-.*)
+
+    no_initial_focus = on
+}
 
 # Edit Launcher Screen
-windowrulev2 = float, initialClass: exo-desktop-item-edit
-# windoerulev2 = size 27% 35%, initialClass: exo-desktop-item-edi
+windowrule {
+    name = edit_launched_menu
+    match:class = ^(exo-desktop-item-edit)#
 
-# Pavucontrol
-windowrulev2 = float, class:^(pusleaudio)
-windowrulev2 = center, class:^(pulseaudio)
-windowrulev2 = size 40% 55%, class:^(pulseaudio)
+    float   = yes
+    size    = 27% 35%
+}
 
-# Code
-# windowrulev2 = fullscreen, class:^(code), onworkspace:w[tv1]
+# Pavucontrol ##########################################
+# windowrulev2 = float, class:^(pusleaudio)
+# windowrulev2 = center, class:^(pulseaudio)
+# windowrulev2 = size 40% 55%, class:^(pulseaudio)
+windowrule {
+    name = pavucontrol
+    match:class = ^(org.pulseaudio.pavucontrol)$
 
-
-# Mpv floats
-windoerulev2 = float, class:^(mpv)
-
-# Shadow for floating windows
-windowrulev2 = noshadow, floating:0
-
-# Floating file picker
-windowrulev2 = float, class: ^(brave)(.*), title: ^(.*)(wants to open)
-
-# Floating file save location
-windowrulev2 = float, class: brave, initialTitle: ^(.*) (wants to save)
-windowrulev2 = size 40% 55%, class: brave, initialTitle: ^(.*) (wants to save)
-
-# nmtui
-windowrulev2 = float, title: nmtui
-
-# Thunar file opration floats
-windowrulev2 = float, initialTitle: File Operation Progress
-windowrulev2 = size 30% 10%, initialTitle: File Operation Progress
-
-# Blue man floats
-windowrulev2 = float, class:blueman-manager
-windowrulev2 = size 40% 40%, class:blueman-manager
-
-# Pavucontrol floats
-windowrulev2 = float, class:org.pulseaudio.pavucontrol
-
-# Browser Popups
-windowrulev2 = float, initialTitle:Untitled - Thorium2
+    float = yes
+    center = yes
+    size = 440 500
+}
 
 
+# Thunar file opration floats #############################################
+# windowrulev2 = float, initialTitle: File Operation Progress
+# windowrulev2 = size 30% 10%, initialTitle: File Operation Progress
 
-# Image viewer floats
-windowrulev2 = float, initialClass: feh
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0,
-# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
-# windowrulev2 = tile, floating:0, class:^(Thorium-browser)
-# windowrulev2 = active_border, rgb(a89884) rgb(ebdbb2) 60deg, class:^(xfce4-appfinder)
-# windowrulev2 = move -100% -50%, class:^(waybar), onworkspace:w[tv1]
-# windowrulev2 = move -100% -50%, class:(waybar), onworkspace:f[1]
+# Thunar file operation floats
+windowrule {
+    name = thunar_file_operations_float
+    match:title = ^(File Operation Progress)$
 
-# windowrulev2 = exec, killall -SIGUSR1 waybar, onworkspace:w[tv1]
+    float = yes
+}
 
-
-# Floating DevTools
-windowrulev2 = float, initialTitle: DevToolsApp
-
-windowrulev2= noblur,class:^()$,title:^()$
-
-
-# swaync 
-# windowrulev2 = move 38% 100%-w-40, class:swaync # Uncomment it, if you don't want it to be distractive
-windowrulev2 = noinitialfocus, class:swaync
-windowrulev2 = float, class:swaync
-
-windowrulev2 = blur , match:namespace swaync-control-center
-windowrulev2 = blur, match:namespace swaync-notification-window
-windowrulev2 = ignorezero, match:namespace swaync-control-center
-windowrulev2 = ignorezero, match:namespace swaync-notification-window
-windowrulev2 = ignorealpha 0.5, match:namespace swaync-control-center
-windowrulev2 = ignorealpha 0.5, match:namespace swaync-notification-window
+# Blue man floats #########################################
+# windowrulev2 = float, class:blueman-manager
+# windowrulev2 = size 40% 40%, class:blueman-manager
+# Blueman's messed up, for now
 
 layerrule {
     name = swaync
